syntax = "proto3";

package org.project_planton.provider.civo.civodatabase.v1;

import "buf/validate/validate.proto";
import "org/project-planton/provider/civo/region.proto";
import "org/project-planton/shared/foreignkey/v1/foreign_key.proto";

// CivoDatabaseSpec defines the essential configuration for creating a managed database instance on Civo.
// Following the 80/20 principle, it exposes only the most commonly used fields.
message CivoDatabaseSpec {
  // A human-readable name for the database instance.
  // This name must be unique within the chosen Civo region.
  string db_instance_name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.max_len = 64
  ];

  // The database engine for the instance (MySQL or PostgreSQL).
  CivoDatabaseEngine engine = 2 [(buf.validate.field).required = true];

  // The engine version for the database.
  // For example: "8.0" for MySQL 8.0, "14" for PostgreSQL 14.
  // Only major (and optionally minor) version numbers are expected.
  string engine_version = 3 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[0-9]+(\\.[0-9]+)?$"
  ];

  // The Civo region where the database will be created.
  CivoRegion region = 4 [(buf.validate.field).required = true];

  // The plan or size identifier for the database instance (e.g., "g3.db.small").
  // This defines CPU, memory, and base storage for the instance.
  string size_slug = 5 [(buf.validate.field).required = true];

  // The number of replica nodes to add to the database (0 means no replicas, just the primary).
  // Typically use 0, 2, or 4 for a total of 1, 3, or 5 nodes in the cluster.
  uint32 replicas = 6 [(buf.validate.field).uint32.lte = 4];

  // The target private network for the database instance.
  // Provide a literal network UUID or a reference to a CivoNetwork resource.
  org.project_planton.shared.foreignkey.v1.StringValueOrRef network_id = 7 [
    (buf.validate.field).required = true,
    (org.project_planton.shared.foreignkey.v1.default_kind) = CivoVpc,
    (org.project_planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.network_id"
  ];

  // (Optional) Firewall rules to attach to this database instance.
  // Provide one or more firewall IDs or references to CivoFirewall resources for access control.
  repeated org.project_planton.shared.foreignkey.v1.StringValueOrRef firewall_ids = 8 [
    (org.project_planton.shared.foreignkey.v1.default_kind) = CivoFirewall,
    (org.project_planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.firewall_id"
  ];

  // (Optional) Custom storage size in GiB for the database, if different from the default provided by size_slug.
  uint32 storage_gib = 9;

  // (Optional) Tags to assign to the database instance for organizational purposes.
  repeated string tags = 10;
}

// Enumeration of supported database engines for Civo managed databases.
enum CivoDatabaseEngine {
  civo_database_engine_unspecified = 0;
  mysql = 1;
  postgres = 2;
}
