syntax = "proto3";

package project.planton.provider.civo.civodatabase.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/civo/civodatabase/v1/spec.proto";
import "project/planton/provider/civo/civodatabase/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// civo-database
message CivoDatabase {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'civo.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CivoDatabase'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CivoDatabaseSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CivoDatabaseStatus status = 5;
}

// civo-database status
message CivoDatabaseStatus {
  //stack-outputs
  //  civo-database stack-outputs
  CivoDatabaseStackOutputs outputs = 1;
}
