syntax = "proto3";

package project.planton.provider.civo.civofirewall.v1;

// CivoFirewallStackOutputs captures the outputs after provisioning a Civo firewall.
message CivoFirewallStackOutputs {
  // The unique ID of the created firewall (UUID generated by Civo).
  string firewall_id = 1;

  // Timestamp when the firewall was created, in RFC3339 format.
  string created_at_rfc3339 = 2;
}
